name:                pipes-p2p
version:             0.1
synopsis:            Library to create P2P networks with pipes.
description:         Toy P2P network where nodes just exchange network
                     addresses. For now this can be used as boilerplate code
                     for developing P2P networks. In the future it should be
                     possible to pass around serialized pipes which perform
                     computations.
homepage:            https://github.com/jdnavarro/pipes-p2p
license:             BSD3
license-file:        LICENSE
author:              Danny Navarro
maintainer:          j@dannynavarro.net
category:            Network, Pipes
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  examples/demo.hs

library
  exposed-modules:     Pipes.Network.P2P
  other-modules:       Pipes.Network.P2P.Message
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >=4.6 && <4.7,
                       async,
                       binary,
                       transformers,
                       bytestring,
                       containers,
                       errors,
                       pipes >= 0.4,
                       pipes-binary >= 0.3,
                       pipes-concurrency,
                       pipes-network >= 0.6,
                       lens-family,
                       network,
                       network-simple-sockaddr

source-repository head
    Type: git
    Location: https://github.com/jdnavarro/pipes-p2p
