name:                pipes-p2p
version:             0.1
synopsis:            Library to create P2P networks with pipes.
description:         Toy P2P network where nodes just exchange network
                     addresses. For now this can be used as boilerplate code
                     for developing P2P networks. In the future it should be
                     possible to pass around serialized pipes which perform
                     computations.
homepage:            https://github.com/jdnavarro/pipes-p2p
license:             BSD3
license-file:        LICENSE
author:              Danny Navarro
maintainer:          j@dannynavarro.net
category:            Network, Pipes
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.3

source-repository head
    type: git
    location: https://github.com/jdnavarro/pipes-p2p

library
  exposed-modules:     Pipes.Network.P2P
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >=4.6 && <4.8,
                       async,
                       binary >=0.7,
                       mtl,
                       bytestring,
                       errors,
                       exceptions,
                       pipes >= 0.4,
                       pipes-concurrency,
                       pipes-network >= 0.6,
                       network,
                       network-simple-sockaddr
