name:                pipes-p2p
version:             0.1
cabal-version:       >=1.10
tested-with:         GHC == 7.6.3
build-type:          Simple
homepage:            https://github.com/jdnavarro/pipes-p2p
license:             BSD3
license-file:        LICENSE
author:              Danny Navarro
maintainer:          j@dannynavarro.net
category:            Network, Pipes
synopsis:            P2P network nodes with pipes
description:
  Library to facilitate the creation of custom P2P networks using `pipes`.

source-repository head
    type: git
    location: https://github.com/jdnavarro/pipes-p2p

library
  exposed-modules:     Pipes.Network.P2P
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >=4.6 && <4.8,
                       async,
                       binary >=0.7,
                       mtl,
                       bytestring,
                       errors,
                       exceptions,
                       pipes >= 0.4,
                       pipes-concurrency,
                       pipes-network >= 0.6,
                       network,
                       network-simple-sockaddr
